<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

            <PreferenceCategory
                app:title="@string/pref_category_account">

                <Preference
                    android:id="@+id/change_name"
                    app:key="change_name"
                    app:summary="@string/pref_account_name_summary"
                    app:title="@string/pref_account_name" />

                <Preference
                    android:id="@+id/change_pin"
                    app:key="change_pin"
                    app:summary="@string/pref_account_pin_summary"
                    app:title="@string/pref_account_pin" />

            </PreferenceCategory>

            <PreferenceCategory android:title="@string/pref_category_general">

                <Preference
                    android:id="@+id/privacy_btn"
                    android:enabled="true"
                    app:key="privacy_policy"
                    app:title="@string/pref_privacy_policy">
                    <intent
                        android:targetClass="com.example.mooddiary.PrivacyPolActivity"
                        android:targetPackage="com.example.mooddiary" />
                </Preference>

                <Preference
                    android:id="@+id/guide_btn"
                    android:enabled="true"
                    app:key="app_guide"
                    app:title="@string/pref_app_guide">
                    <intent
                        android:targetClass="com.example.mooddiary.GuideActivity"
                        android:targetPackage="com.example.mooddiary" />
                </Preference>

                <Preference
                    android:id="@+id/contact_btn"
                    android:enabled="true"
                    android:shouldDisableView="true"
                    app:key="contact_dev"
                    app:summary="@string/pref_contact_dev_summary"
                    app:title="@string/pref_contact_dev">
                    <intent
                        android:action="android.intent.action.VIEW"
                        android:data="@string/pref_contact_dev_uri">
                        <extra
                            android:name="android.intent.extra.SUBJECT"
                            android:value="Mood Journal Feedback" />
                    </intent>
                </Preference>

                <Preference
                    android:id="@+id/rate_btn"
                    android:enabled="false"
                    app:key="rate_playstore"
                    app:summary="@string/pref_rate_playstore_summary"
                    app:title="@string/pref_rate_playstore" >

                </Preference>

            </PreferenceCategory>

</PreferenceScreen>