<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_newentry"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/menu_new_entry" />
        <item
            android:id="@+id/nav_analytics"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/menu_analytics" />
        <item
            android:id="@+id/nav_diary"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/menu_diary" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/menu_settings" />
    </group>

</menu>
