<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_newentry">

    <fragment
        android:id="@+id/nav_newentry"
        android:name="com.example.mooddiary.ui.new_entry.NewEntryFragment"
        android:label="@string/menu_new_entry"
        tools:layout="@layout/fragment_new_entry" />

    <fragment
        android:id="@+id/nav_analytics"
        android:name="com.example.mooddiary.ui.analytics.AnalyticsFragment"
        android:label="@string/menu_analytics"
        tools:layout="@layout/fragment_analytics" />

    <fragment
        android:id="@+id/nav_diary"
        android:name="com.example.mooddiary.ui.diary.DiaryFragment"
        android:label="@string/menu_diary"
        tools:layout="@layout/fragment_diary"/>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.mooddiary.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@xml/preferences" />

</navigation>