<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/welcomeSecondaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/welcome_secondary_text"
        android:textColor="@color/btnColorHighlighr"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
<!--        app:layout_constraintTop_toBottomOf="@+id/welcomePrimaryText" />-->

    <EditText
        android:id="@+id/inputName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/name_placeholder"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/btnColorHighlighr"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeSecondaryText" />

    <EditText
        android:id="@+id/inputCPin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/confirm_pin_placeholder"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:textColor="@color/white"
        android:textColorHint="@color/btnColorHighlighr"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPin" />

    <EditText
        android:id="@+id/inputPin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/pin_placeholder"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:textColor="@color/white"
        android:textColorHint="@color/btnColorHighlighr"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputName" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="325dp"
        android:layout_marginLeft="325dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:focusable="auto"
        app:backgroundTint="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_media_play" />

</androidx.constraintlayout.widget.ConstraintLayout>